Remove OMAP serial driver
Signed-off-by: Aneesh V <aneesh@ti.com>

--- a/arch/arm/configs/am335x_evm_android_defconfig
+++ b/arch/arm/configs/am335x_evm_android_defconfig
@@ -1480,10 +1480,7 @@ CONFIG_DEVKMEM=y
 #
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX3107 is not set
-CONFIG_SERIAL_CORE=y
-CONFIG_SERIAL_CORE_CONSOLE=y
-CONFIG_SERIAL_OMAP=y
-CONFIG_SERIAL_OMAP_CONSOLE=y
+# CONFIG_SERIAL_OMAP is not set
 # CONFIG_SERIAL_TIMBERDALE is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
 # CONFIG_SERIAL_ALTERA_UART is not set
