--- a/drivers/tty/serial/Kconfig
+++ b/drivers/tty/serial/Kconfig
@@ -1324,6 +1324,7 @@ config SERIAL_OF_PLATFORM
 
 config SERIAL_OMAP
 	tristate "OMAP serial port support"
+	default n
 	depends on ARCH_OMAP2 || ARCH_OMAP3 || ARCH_OMAP4
 	select SERIAL_CORE
 	help
